# window_generator

./: demo.ipynb  pyproject.toml
window_generator/: window_generator.py
